--- a/styles/main.css
+++ b/styles/main.css
@@ -72,7 +72,8 @@ body {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 4rem;
 }
 
 button {
@@ -139,6 +140,7 @@ body.light-mode .card svg path {
 }
 
 .card input[type="range"] {
+  appearance: none;
   -webkit-appearance: none;
   width: 9rem;
   height: 5px;
