fixed responsive glitch on toogle theme button

--- a/styles/main.css
+++ b/styles/main.css
@@ -185,3 +185,10 @@ body.dark-mode .card input[type="range"]::-webkit-slider-thumb {
     gap: 8rem;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .toogle-theme {
+    top: 2rem;
+    right: 2rem;
+  }
+}
