--- a/styles/main.css
+++ b/styles/main.css
@@ -187,7 +187,7 @@ body.dark-mode .card input[type="range"]::-webkit-slider-thumb {
 }
 
 @media screen and (max-width: 768px) {
-  .content {
+  .timer {
     margin-top: 1rem;
   }
 
